src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__allow_star_arg_any.snap
---
source: src/rules/flake8_annotations/mod.rs
expression: diagnostics
---
- kind:
    DynamicallyTypedExpression: a
  location:
    row: 10
    column: 11
  end_location:
    row: 10
    column: 14
  fix: ~
  parent: ~
- kind:
    DynamicallyTypedExpression: foo
  location:
    row: 15
    column: 46
  end_location:
    row: 15
    column: 49
  fix: ~
  parent: ~
- kind:
    DynamicallyTypedExpression: a
  location:
    row: 40
    column: 28
  end_location:
    row: 40
    column: 31
  fix: ~
  parent: ~
- kind:
    DynamicallyTypedExpression: foo_method
  location:
    row: 44
    column: 66
  end_location:
    row: 44
    column: 69
  fix: ~
  parent: ~

