src/rules/flake8_annotations/snapshots/ruff__rules__flake8_annotations__tests__mypy_init_return.snap
---
source: src/rules/flake8_annotations/mod.rs
expression: diagnostics
---
- kind:
    MissingReturnTypeSpecialMethod: __init__
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 16
  fix:
    content: " -> None"
    location:
      row: 5
      column: 22
    end_location:
      row: 5
      column: 22
  parent: ~
- kind:
    MissingReturnTypeSpecialMethod: __init__
  location:
    row: 11
    column: 8
  end_location:
    row: 11
    column: 16
  fix:
    content: " -> None"
    location:
      row: 11
      column: 27
    end_location:
      row: 11
      column: 27
  parent: ~
- kind:
    MissingReturnTypePrivateFunction: __init__
  location:
    row: 40
    column: 4
  end_location:
    row: 40
    column: 12
  fix: ~
  parent: ~

